k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-challenge
  labels:
    app.kubernetes.io/part-of: devops-challenge
